lab02/log/build_2024-10-26_19-16-56/lab02_pkg/stderr.log
  File "/home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 396
    if self.orientation = "South":
       ^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

